Added program logic according to Mitsubishi's recommendations.

--- a/src/main/resources/brms_agent.properties
+++ b/src/main/resources/brms_agent.properties
@@ -16,7 +16,7 @@ newInstance=true
 
 #this specifies a list of urls for packages - these urls
 #are those that are exposed by the BRMS
-url=http://localhost:8080/drools-guvnor/org.drools.guvnor.Guvnor/package/dealer/TEST
+url=http://localhost:8080/jboss-brms/org.drools.guvnor.Guvnor/package/mitsubishi/TEST
 
 #the following can be used with the urls to keep a local cache
 #so if the runtime server is restarted, the BRMS does not need
